# BioFace

./: .env.example  .gitattributes  .gitignore  CAMERA_AUDIT.json  CAMERA_RAW_LOG.txt  LOGIN_FIX.md  README.md  SETUP_GUIDE.md  TRACER_FACE.txt  _create_admin.py  _start_isup.py  access_control.py  attendance_monitor.py  attendance_utils.py  build_isup.ps1  check_and_create_admin.py  clean_css.py  create_admin.py  database.py  deploy.ps1  deploy_ubuntu.sh  dev.ps1  fix_alarms.py  fix_cameras.py  fix_dashboard.py  fix_devices.py  fix_icons_colors.py  fix_icons_commands.py  fix_input_css.py  fix_login.bat  fix_templates.py  grab_screenshot.py  gunicorn.conf.py  hikvision_sdk.py  isup_manager.py  isup_sdk_server.py  main.py  menu.example.json  models.py  new.sh  (+32 more)
backend/: .env.example  database.py  main.py  menu.example.json  models.py  requirements.txt
bot/: README.md  __init__.py  config.py  formatters.py  handlers.py  main.py  smoke_test.py
core/: access_control.py  database.py  models.py  redis_client.py  system_config.py
frontend/: design.md  index.html  package-lock.json  package.json  vite.config.js
isup/: isup_sdk_server.py
isup_server/: CMakeLists.txt  README.md  isup_server.hpp  main.cpp  passive_tcp_server.cpp  redis_bridge.cpp  redis_bridge.hpp
mobile/: pad_logo.py  pubspec.yaml
routers/: auth.py  cameras.py  employees.py  organizations.py  pages.py  planning.py  settings.py  system_monitor.py  users.py  webhook.py
scratch/: camera_audit.py  camera_audit2.py  camera_audit3.py  camera_audit4.py  check_isup_full.py  check_logs.py  check_shape.py  (+49 more)
(+198 files in other folders)
